--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run prod",
-    "dev": "webpack -d && webpack-dev-server --content-base src/ --inline --hot",
-    "prod": "webpack -p && webpack-dev-server --content-base build/ --inline",
-    "build": "webpack -p",
-    "test": "webpack -d"
+    "dev": "webpack -d && webpack-dev-server --hot",
+    "prod": "webpack -p && webpack-dev-server",
+    "build": "webpack -p"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "react"
+    ]
   },
   "keywords": [
     "reactjs",
@@ -19,16 +24,16 @@
   "author": "Jan Marcano",
   "license": "MIT",
   "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "webpack": "^4.1.1",
-    "webpack-dev-server": "^3.1.1"
-  },
-  "devDependencies": {
     "html-webpack-plugin": "^3.0.6",
-    "webpack-cli": "^2.0.11"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1"
   }
 }
