--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-front-end",
   "version": "1.0.0",
   "description": "Desarrollo de aplicacion de prueba para Desarrollo Front-end de MercadoLibre",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "npm run prod",
     "dev": "webpack -d && webpack-dev-server --hot",
@@ -24,14 +24,18 @@
   "author": "Jan Marcano",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.3",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0"
   },
   "devDependencies": {
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.0.6",
+    "sass-loader": "^6.0.7",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.1.1"
