--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "npm run prod",
-    "dev": "webpack -d && webpack-dev-server --hot",
-    "prod": "webpack -p && webpack-dev-server",
+    "dev": "concurrently \"webpack -d -w\" \"node server.js\"",
+    "prod": "webpack -p && node server.js",
     "build": "webpack -p"
   },
   "babel": {
@@ -28,12 +28,14 @@
     "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router": "^4.2.0"
+    "react-router-dom": "^4.2.2",
+    "request": "^2.85.0"
   },
   "devDependencies": {
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "concurrently": "^3.5.1",
     "html-webpack-plugin": "^3.0.6",
     "sass-loader": "^6.0.7",
     "webpack": "^4.1.1",
