--- a/package.json
+++ b/package.json
@@ -37,8 +37,13 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.1",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.0.6",
+    "meyer-reset-sass": "^1.0.1",
+    "node-neat": "^2.0.0-beta.0",
+    "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.1.1"
