--- a/package.json
+++ b/package.json
@@ -24,24 +24,25 @@
   "author": "Jan Marcano",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3",
-    "npm": "^5.7.1",
     "query-string": "^6.0.0",
     "react": "^16.2.0",
+    "react-bytesize-icons": "^0.8.2",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "request": "^2.85.0"
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.0.0",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
+    "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.6",
-    "meyer-reset-sass": "^1.0.1",
-    "node-neat": "^2.0.0-beta.0",
     "node-sass": "^4.7.2",
+    "npm": "^5.7.1",
+    "request": "^2.85.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
